[gd_scene load_steps=16 format=3 uid="uid://d2qc5tyd70kd4"]

[ext_resource type="Texture2D" uid="uid://bhuxwncxsggkx" path="res://assets/textures/shop/Shop_Background.png" id="1_cimqq"]
[ext_resource type="Script" uid="uid://bfnmg0sj8e6br" path="res://scenes/shop/shop.gd" id="1_pe3u1"]
[ext_resource type="Texture2D" uid="uid://bbavsry35i1gw" path="res://assets/textures/shop/Table.png" id="2_yltc6"]
[ext_resource type="Script" uid="uid://bxegcsl6d6yrr" path="res://scenes/shop/register_button.gd" id="3_fpbbi"]
[ext_resource type="Texture2D" uid="uid://dnr5w8yvj3y46" path="res://assets/textures/shop/Cash_register0.png" id="4_m0qts"]
[ext_resource type="Script" uid="uid://cs4jwoc644xts" path="res://scenes/shop/book_button.gd" id="5_6yl83"]
[ext_resource type="Texture2D" uid="uid://bhv561o33f87" path="res://assets/textures/shop/Book.png" id="6_rdw2s"]
[ext_resource type="Texture2D" uid="uid://ciyi5p56msksg" path="res://assets/textures/shop/Cash_Keyboard.png" id="7_rdw2s"]
[ext_resource type="Texture2D" uid="uid://dm1k5k5ey2nvw" path="res://assets/textures/shop/PriceList.png" id="8_2xo2e"]
[ext_resource type="Script" uid="uid://blnj2hy2xrkvi" path="res://scenes/shop/cash_keyboard.gd" id="9_8qn5i"]
[ext_resource type="Texture2D" uid="uid://ccd1xa4uy6w0o" path="res://assets/textures/shop/0.png" id="9_bhc6i"]
[ext_resource type="Texture2D" uid="uid://dbyd1145u5o4" path="res://assets/textures/shop/dot.png" id="11_g6lcs"]
[ext_resource type="Texture2D" uid="uid://dbuqltxo4fwxk" path="res://assets/textures/shop/x.png" id="12_131kw"]
[ext_resource type="Script" uid="uid://c6rs34qb1jxj5" path="res://scenes/shop/counter.gd" id="12_dww4p"]
[ext_resource type="Texture2D" uid="uid://bwecwyg6iutne" path="res://assets/textures/shop/checkmark.png" id="13_xoc10"]

[node name="Shop" type="Node2D"]
script = ExtResource("1_pe3u1")

[node name="Background" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(578, 205)
scale = Vector2(5.59247, 5.59247)
texture = ExtResource("1_cimqq")

[node name="TableBackground" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(576.894, 513.125)
scale = Vector2(5.58333, 5.58333)
texture = ExtResource("2_yltc6")

[node name="RegisterButton" type="Area2D" parent="."]
script = ExtResource("3_fpbbi")

[node name="Sprite2D" type="Sprite2D" parent="RegisterButton"]
texture_filter = 1
position = Vector2(973, 407)
scale = Vector2(5.583, 5.583)
texture = ExtResource("4_m0qts")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="RegisterButton"]
position = Vector2(973, 407)
scale = Vector2(5.583, 5.583)
polygon = PackedVector2Array(-14.5083, -10.7469, -14.8665, -10.0304, -17.9115, 2.86584, -21.6729, 7.70195, -14.1501, 16.6577, 15.9413, 16.8368, 15.2248, 8.59753, 11.6425, 5.01522, 15.583, 1.79115, 15.4039, -5.9108, 12.0007, -10.0304, 10.3887, -18.628, -11.8216, -18.4489, -14.1501, -12.5381)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
offset_right = 1166.0
offset_bottom = 666.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="BookButton" type="Area2D" parent="CanvasLayer2"]
script = ExtResource("5_6yl83")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer2/BookButton"]
texture_filter = 1
position = Vector2(1131, 478)
scale = Vector2(5.583, 5.583)
texture = ExtResource("6_rdw2s")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CanvasLayer2/BookButton"]
polygon = PackedVector2Array(1119, 430, 1082, 503, 1143, 536, 1185, 463)

[node name="CashKeyboard" type="Sprite2D" parent="CanvasLayer2"]
texture_filter = 1
position = Vector2(606, 325)
scale = Vector2(4.26, 4.26)
texture = ExtResource("7_rdw2s")
script = ExtResource("9_8qn5i")

[node name="Display" type="HBoxContainer" parent="CanvasLayer2/CashKeyboard"]
offset_left = -37.0
offset_top = -72.0
offset_right = 71.0
offset_bottom = -59.0
theme_override_constants/separation = 8

[node name="Digit0" type="TextureRect" parent="CanvasLayer2/CashKeyboard/Display"]
layout_mode = 2
texture = ExtResource("9_bhc6i")

[node name="TextureRect5" type="TextureRect" parent="CanvasLayer2/CashKeyboard/Display"]
visible = false
layout_mode = 2

[node name="TextureRact9" type="TextureRect" parent="CanvasLayer2/CashKeyboard/Display"]
visible = false
layout_mode = 2

[node name="Digit1" type="TextureRect" parent="CanvasLayer2/CashKeyboard/Display"]
layout_mode = 2
texture = ExtResource("9_bhc6i")

[node name="TextureRect4" type="TextureRect" parent="CanvasLayer2/CashKeyboard/Display"]
visible = false
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer2/CashKeyboard/Display"]
visible = false
layout_mode = 2

[node name="Digit2" type="TextureRect" parent="CanvasLayer2/CashKeyboard/Display"]
layout_mode = 2
texture = ExtResource("9_bhc6i")

[node name="Dot" type="TextureRect" parent="CanvasLayer2/CashKeyboard/Display"]
layout_mode = 2
texture = ExtResource("11_g6lcs")

[node name="TextureRect7" type="TextureRect" parent="CanvasLayer2/CashKeyboard/Display"]
visible = false
layout_mode = 2

[node name="Digit3" type="TextureRect" parent="CanvasLayer2/CashKeyboard/Display"]
layout_mode = 2
texture = ExtResource("9_bhc6i")

[node name="TextureRect8" type="TextureRect" parent="CanvasLayer2/CashKeyboard/Display"]
visible = false
layout_mode = 2

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer2/CashKeyboard/Display"]
visible = false
layout_mode = 2

[node name="Digit4" type="TextureRect" parent="CanvasLayer2/CashKeyboard/Display"]
layout_mode = 2
texture = ExtResource("9_bhc6i")

[node name="Buttons" type="GridContainer" parent="CanvasLayer2/CashKeyboard"]
layout_direction = 3
offset_left = -80.108
offset_top = -53.5211
offset_right = 54.892
offset_bottom = 66.4789
theme_override_constants/v_separation = 2
columns = 5

[node name="X" type="Area2D" parent="CanvasLayer2/CashKeyboard"]

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer2/CashKeyboard/X"]
position = Vector2(111.268, -49.7653)
texture = ExtResource("12_131kw")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CanvasLayer2/CashKeyboard/X"]
position = Vector2(111.268, -49.7653)
polygon = PackedVector2Array(-17.1361, 13.1455, -5.39905, 0.234741, -17.3709, -13.615, -16.4319, -16.4319, -11.9718, -15.9624, -0.469482, -4.46009, 11.9718, -16.9014, 16.1972, -16.4319, 16.4319, -12.2066, 5.16432, -0.704224, 16.6667, 12.6761, 16.6667, 15.493, 12.6761, 16.1972, 0.234756, 4.22535, -11.7371, 16.4319, -16.1972, 16.6667)

[node name="Checkmark" type="Area2D" parent="CanvasLayer2/CashKeyboard"]

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer2/CashKeyboard/Checkmark"]
position = Vector2(-120.188, -49.061)
texture = ExtResource("13_xoc10")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CanvasLayer2/CashKeyboard/Checkmark"]
position = Vector2(-1.17371, -11.0329)
polygon = PackedVector2Array(-103.521, -55.1643, -125.587, -28.8732, -134.272, -39.2019, -135.681, -34.507, -127.934, -23.0047, -123.005, -23.7089, -102.113, -51.6432)

[node name="Reset" type="Button" parent="CanvasLayer2/CashKeyboard"]
offset_left = -93.1925
offset_top = -8.4507
offset_right = -39.1925
offset_bottom = 22.5493
rotation = -1.07338
focus_mode = 0
text = "RESET"

[node name="PriceList" type="Sprite2D" parent="CanvasLayer2"]
visible = false
texture_filter = 1
position = Vector2(580, 323)
scale = Vector2(2, 2)
texture = ExtResource("8_2xo2e")

[node name="Counter" type="GridContainer" parent="."]
offset_left = 184.0
offset_top = 374.0
offset_right = 820.0
offset_bottom = 550.0
columns = 6
script = ExtResource("12_dww4p")

[connection signal="mouse_entered" from="RegisterButton" to="RegisterButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="RegisterButton" to="RegisterButton" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer2/BookButton" to="CanvasLayer2/BookButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer2/BookButton" to="CanvasLayer2/BookButton" method="_on_mouse_exited"]
[connection signal="input_event" from="CanvasLayer2/CashKeyboard/Checkmark" to="CanvasLayer2/CashKeyboard" method="_on_checkmark_input_event"]
[connection signal="pressed" from="CanvasLayer2/CashKeyboard/Reset" to="CanvasLayer2/CashKeyboard" method="_on_reset_pressed"]
